// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listEdits: 1 edits 1`] = `
[
  {
    "changes": [
      [
        1,
        "a",
      ],
    ],
    "timestamp": 0,
  },
]
`;

exports[`listEdits: 2 edits 1`] = `
[
  {
    "changes": [
      [
        1,
        "a",
      ],
    ],
    "timestamp": 0,
  },
  {
    "changes": [
      [
        0,
        1,
      ],
      [
        1,
        "b",
      ],
    ],
    "timestamp": 10,
  },
]
`;

exports[`listEdits: 3 edits 1`] = `
[
  {
    "changes": [
      [
        1,
        "a",
      ],
    ],
    "timestamp": 0,
  },
  {
    "changes": [
      [
        0,
        1,
      ],
      [
        1,
        "b",
      ],
    ],
    "timestamp": 10,
  },
  {
    "changes": [
      [
        0,
        2,
      ],
      [
        1,
        "c",
      ],
    ],
    "timestamp": 20,
  },
]
`;

exports[`listEdits: 4 edits 1`] = `
[
  {
    "changes": [
      [
        0,
        1,
      ],
      [
        1,
        "b",
      ],
    ],
    "timestamp": 10,
  },
  {
    "changes": [
      [
        0,
        2,
      ],
      [
        1,
        "c",
      ],
    ],
    "timestamp": 20,
  },
  {
    "changes": [
      [
        0,
        3,
      ],
      [
        1,
        "d",
      ],
    ],
    "timestamp": 30,
  },
]
`;

exports[`listEdits: 5 edits 1`] = `
[
  {
    "changes": [
      [
        0,
        2,
      ],
      [
        1,
        "c",
      ],
    ],
    "timestamp": 20,
  },
  {
    "changes": [
      [
        0,
        3,
      ],
      [
        1,
        "d",
      ],
    ],
    "timestamp": 30,
  },
  {
    "changes": [
      [
        0,
        4,
      ],
      [
        1,
        "e",
      ],
    ],
    "timestamp": 40,
  },
]
`;
